<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backblue"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/linearLayout2">

    </LinearLayout>

    <!-- Login Button -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9fccff"
        android:text="@string/btn_register"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/btnLinkToLoginScreen"
        android:layout_alignParentStart="true" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0000ff"
        android:alpha="0.8"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:hint="@string/hint_name"
        android:alpha="0.5"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:layout_above="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:hint="@string/hint_password"
        android:alpha="0.5"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:layout_above="@+id/btnRegister"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="109dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:hint="@string/hint_email"
        android:alpha="0.5"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp" />

</RelativeLayout>
